force-app/main/default/objects/Account/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <description>Identifies the primary industry in which the Account operates. If they operate in multiple markets, select &quot;Multi-Market&quot;</description>
    <inlineHelpText>Choose the primary industry in which the Account operates. If they operate in multiple markets, select &quot;Multi-Market&quot;</inlineHelpText>
    <label>Account Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaming</fullName>
                <default>true</default>
                <label>Gaming</label>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Multi-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>