force-app/main/default/objects/Account/fields/Acct_Client_Solutions_Manager__c.field-meta.xml
<CustomField>
    <fullName>Acct_Client_Solutions_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the CSM on the account</description>
    <inlineHelpText>Identifies the CSM on the account</inlineHelpText>
    <label>Client Solutions Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User selected hasn&apos;t been assigned to the CSM role. Please contact your administrator</errorMessage>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Client_Solution_Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>