force-app/main/default/objects/Account/fields/AdSales_CF_Ad_Budget__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Ad_Budget__c</fullName>
    <label>Ad Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>