force-app/main/default/objects/Account/fields/AdSales_CF_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if Account has completed Credit Check as part of Due Diligence and financial set up</inlineHelpText>
    <label>Credit Check</label>
    <type>Checkbox</type>
</CustomField>