force-app/main/default/objects/Account/fields/AdSales_CF_Email__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Email__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>