force-app/main/default/objects/Account/fields/AdSales_CF_Notes__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>