force-app/main/default/objects/Account/fields/AdSales_CF_Number_of_Working_Opps__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Number_of_Working_Opps__c</fullName>
    <label>Number of Working Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Opportunity Created, Proposal Sent to Account, In Negotiation, Inventory Reserved, In Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>