force-app/main/default/objects/Account/fields/AdSales_CF_Role_Details__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Role_Details__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>