force-app/main/default/objects/Account/fields/AdSales_CF_Status__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Status__c</fullName>
    <label>Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>