force-app/main/default/objects/Account/fields/AdSales_CF_Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Target_Revenue__c</fullName>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>