force-app/main/default/objects/Account/fields/AdSales_CF_Terms__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>