force-app/main/default/objects/Account/fields/AdSales_CF_Total_Approved_Credit__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Total_Approved_Credit__c</fullName>
    <label>Total Approved Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>