force-app/main/default/objects/Account/fields/AdSales_CF_Total_Working_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Total_Working_Revenue__c</fullName>
    <label>Total Working Revenue</label>
    <summarizedField>Opportunity.AdSales_CF_Total_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Opportunity Created, Proposal Sent to Account, In Negotiation, Inventory Reserved, In Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>