force-app/main/default/objects/Account/fields/Advertiser_URL__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_URL__c</fullName>
    <label>Advertiser URL</label>
    <length>156</length>
    <type>Text</type>
</CustomField>