force-app/main/default/objects/Account/fields/APDA__c.field-meta.xml
<CustomField>
    <fullName>APDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APDA</label>
    <type>Checkbox</type>
</CustomField>