force-app/main/default/objects/Account/fields/App_Demo_for_BAS_Submission__c.field-meta.xml
<CustomField>
    <fullName>App_Demo_for_BAS_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Demo for BAS Submission</label>
    <type>Checkbox</type>
</CustomField>