force-app/main/default/objects/Account/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GAME DEVELOPER / PUBLISHER (PlayStation®4, PlayStation®Vita, PlayStation®3)</fullName>
            </value>
            <value>
                <fullName>PlayStation®Mobile</fullName>
            </value>
            <value>
                <fullName>Tools and Middleware</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Platform Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>