force-app/main/default/objects/Account/fields/BAS__c.field-meta.xml
<CustomField>
    <fullName>BAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAS</label>
    <type>Checkbox</type>
</CustomField>