force-app/main/default/objects/Account/fields/Base_Title__c.field-meta.xml
<CustomField>
    <fullName>Base_Title__c</fullName>
    <label>Base Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>