force-app/main/default/objects/Account/fields/Basic_Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Basic_Terms_Condition__c</fullName>
    <label>Basic Terms &amp; Condition</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>