force-app/main/default/objects/Account/fields/Business_Condition_Size_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Business_Condition_Size_of_Business__c</fullName>
    <label>Business Condition/Size of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>