force-app/main/default/objects/Account/fields/Cash_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>Cash_in_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash in Advance</label>
    <type>Checkbox</type>
</CustomField>