force-app/main/default/objects/Account/fields/Company_Director_Officer__c.field-meta.xml
<CustomField>
    <fullName>Company_Director_Officer__c</fullName>
    <label>Company Director/Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>