force-app/main/default/objects/Account/fields/Company_Fax_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax_No__c</fullName>
    <label>Company Fax No.</label>
    <type>Phone</type>
</CustomField>