force-app/main/default/objects/Account/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <formula>IMAGE( &quot;servlet/servlet.FileDownload?file=&quot;&amp; Document_ID__c, &quot;Logo&quot;,50,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Logo</label>
    <type>Text</type>
</CustomField>