force-app/main/default/objects/Account/fields/Company_No__c.field-meta.xml
<CustomField>
    <fullName>Company_No__c</fullName>
    <label>Company No</label>
    <length>32</length>
    <type>Text</type>
</CustomField>