force-app/main/default/objects/Account/fields/Contract_APDA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_APDA_Expiry_Date__c</fullName>
    <label>Contract (APDA) Expiry Date</label>
    <type>Date</type>
</CustomField>