force-app/main/default/objects/Account/fields/Dashboard_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Status_Notes__c</fullName>
    <label>Dashboard/Status Notes</label>
    <type>TextArea</type>
</CustomField>