force-app/main/default/objects/Account/fields/Description_Service_Outline__c.field-meta.xml
<CustomField>
    <fullName>Description_Service_Outline__c</fullName>
    <label>Description/Service Outline</label>
    <type>TextArea</type>
</CustomField>