force-app/main/default/objects/Account/fields/Finance_121_150_Days_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Finance_121_150_Days_Ageing__c</fullName>
    <description>Invoiced amount that is past due by between 121-150 days per SAP</description>
    <inlineHelpText>Invoiced amount that is past due by between 121-150 days per SAP</inlineHelpText>
    <label>121-150 Days Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>