force-app/main/default/objects/Account/fields/Finance_151_Days_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Finance_151_Days_Ageing__c</fullName>
    <description>Invoiced amount that is past due by over 151 days per SAP</description>
    <inlineHelpText>Invoiced amount that is past due by over 151 days per SAP</inlineHelpText>
    <label>151+ Days Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>