force-app/main/default/objects/Account/fields/Finance_Amount_over_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount_over_Credit_Limit__c</fullName>
    <formula>if(AdSales_CF_Total_Approved_Credit__c - Finance_Outstanding_Amount__c &lt;0,ABS(AdSales_CF_Total_Approved_Credit__c - Finance_Outstanding_Amount__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount over Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>