force-app/main/default/objects/Account/fields/Finance_Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Current_Amount__c</fullName>
    <description>Invoiced amount for the most recent billing period</description>
    <inlineHelpText>Invoiced amount for the most recent billing period per SAP</inlineHelpText>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>