force-app/main/default/objects/Account/fields/Finance_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Outstanding_Amount__c</fullName>
    <description>Outstanding amount due from the customer yet to be paid</description>
    <inlineHelpText>Outstanding amount due from the customer yet to be paid, as calculated by SAP</inlineHelpText>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>