force-app/main/default/objects/Account/fields/Freewheel_ID__c.field-meta.xml
<CustomField>
    <fullName>Freewheel_ID__c</fullName>
    <description>Identifier for the advertiser or agency ID in Freewheel</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier for the advertiser or agency ID in Freewheel</inlineHelpText>
    <label>Freewheel ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>