force-app/main/default/objects/Account/fields/Icon_Placement_Marketing_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Icon_Placement_Marketing_Obligation__c</fullName>
    <label>Icon Placement / Marketing Obligation</label>
    <type>TextArea</type>
</CustomField>