force-app/main/default/objects/Account/fields/Legal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Legal_Comment__c</fullName>
    <label>Legal Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>