force-app/main/default/objects/Account/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Private Company</fullName>
            </value>
            <value>
                <fullName>Public Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>