force-app/main/default/objects/Account/fields/Marketing_Comment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Comment__c</fullName>
    <label>Marketing Comment</label>
    <type>TextArea</type>
</CustomField>