force-app/main/default/objects/Account/fields/Media_Contact__c.field-meta.xml
<CustomField>
    <fullName>Media_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Media Contact)</relationshipLabel>
    <relationshipName>MediaContact</relationshipName>
    <type>Lookup</type>
</CustomField>