force-app/main/default/objects/Account/fields/Middleware__c.field-meta.xml
<CustomField>
    <fullName>Middleware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Middleware</label>
    <type>Checkbox</type>
</CustomField>