force-app/main/default/objects/Account/fields/Middleware_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Product_Service__c</fullName>
    <label>Middleware Product/ Service</label>
    <type>TextArea</type>
</CustomField>