force-app/main/default/objects/Account/fields/Modelling__c.field-meta.xml
<CustomField>
    <fullName>Modelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modelling</label>
    <type>Checkbox</type>
</CustomField>