force-app/main/default/objects/Account/fields/N_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>N_of_Accounts__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>