force-app/main/default/objects/Account/fields/No_Of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Opportunities__c</fullName>
    <label>No_Of_Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>