force-app/main/default/objects/Account/fields/Other_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Other_Platforms__c</fullName>
    <label>Other Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Bada</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Nintendo</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PlayStation 2</fullName>
            </value>
            <value>
                <fullName>PlayStation 3</fullName>
            </value>
            <value>
                <fullName>PSP</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>Sony Smartphone</fullName>
            </value>
            <value>
                <fullName>Sony Tablet</fullName>
            </value>
            <value>
                <fullName>Sony TV</fullName>
            </value>
            <value>
                <fullName>Symbian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>