force-app/main/default/objects/Account/fields/PlayStation_4__c.field-meta.xml
<CustomField>
    <fullName>PlayStation_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PlayStation 4</label>
    <type>Checkbox</type>
</CustomField>