force-app/main/default/objects/Account/fields/PlayStation_TV__c.field-meta.xml
<CustomField>
    <fullName>PlayStation_TV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PlayStation TV</label>
    <type>Checkbox</type>
</CustomField>