force-app/main/default/objects/Account/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matt Tomczek</fullName>
            </value>
            <value>
                <fullName>Noura Sen</fullName>
            </value>
            <value>
                <fullName>Pam lluroe</fullName>
            </value>
            <value>
                <fullName>Tatsu Nakajima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>