force-app/main/default/objects/Account/fields/Proposed_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Distribution_Method__c</fullName>
    <label>Proposed Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disc (Physical Media)</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>