force-app/main/default/objects/Account/fields/PSM__c.field-meta.xml
<CustomField>
    <fullName>PSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSM</label>
    <type>Checkbox</type>
</CustomField>