force-app/main/default/objects/Account/fields/PSVR__c.field-meta.xml
<CustomField>
    <fullName>PSVR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Developer is supporting PSVR</inlineHelpText>
    <label>PSVR</label>
    <type>Checkbox</type>
</CustomField>