force-app/main/default/objects/Account/fields/Purpose_Of_having_Application__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_having_Application__c</fullName>
    <label>Purpose Of having Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>