force-app/main/default/objects/Account/fields/Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Discount__c</fullName>
    <label>Account Discount (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>