force-app/main/default/objects/Account/fields/Same_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Same_Secondary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Secondary Contact</label>
    <type>Checkbox</type>
</CustomField>