force-app/main/default/objects/Account/fields/SAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Name__c</fullName>
    <inlineHelpText>Account Name created in SAP as a Net Ads Customer</inlineHelpText>
    <label>SAP Account Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>