force-app/main/default/objects/Account/fields/SAP_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_No__c</fullName>
    <label>SAP Customer No</label>
    <length>32</length>
    <type>Text</type>
</CustomField>