force-app/main/default/objects/Account/fields/SCEA_Obligation__c.field-meta.xml
<CustomField>
    <fullName>SCEA_Obligation__c</fullName>
    <label>SCEA Obligation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>