force-app/main/default/objects/Account/fields/SCEE_Partner__c.field-meta.xml
<CustomField>
    <fullName>SCEE_Partner__c</fullName>
    <label>SCEE Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antony Clark</fullName>
            </value>
            <value>
                <fullName>Jolene Colquhoun</fullName>
            </value>
            <value>
                <fullName>Kathrin Strangfeld</fullName>
            </value>
            <value>
                <fullName>Mathew Davies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>