force-app/main/default/objects/Account/fields/SCEI_Tech_Support_Detail__c.field-meta.xml
<CustomField>
    <fullName>SCEI_Tech_Support_Detail__c</fullName>
    <label>SCEI Tech Support Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>