force-app/main/default/objects/Account/fields/SCEI_Tech_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>SCEI_Tech_Support_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCEI Tech Support Required</label>
    <type>Checkbox</type>
</CustomField>