force-app/main/default/objects/Account/fields/SDK_Technical_Solution__c.field-meta.xml
<CustomField>
    <fullName>SDK_Technical_Solution__c</fullName>
    <label>SDK/Technical Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet determined</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>PSM</fullName>
            </value>
            <value>
                <fullName>Trilithium</fullName>
            </value>
            <value>
                <fullName>WebMaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>