force-app/main/default/objects/Account/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Provider</label>
    <type>Checkbox</type>
</CustomField>