force-app/main/default/objects/Account/fields/SNE_Comment__c.field-meta.xml
<CustomField>
    <fullName>SNE_Comment__c</fullName>
    <label>SNE Comment</label>
    <type>TextArea</type>
</CustomField>