force-app/main/default/objects/Account/fields/SNE_CPA__c.field-meta.xml
<CustomField>
    <fullName>SNE_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SNE CPA</label>
    <type>Checkbox</type>
</CustomField>