force-app/main/default/objects/Account/fields/Supported_Pillars__c.field-meta.xml
<CustomField>
    <fullName>Supported_Pillars__c</fullName>
    <inlineHelpText>Devrel support account team manager profile</inlineHelpText>
    <label>Supported Pillars</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4K</fullName>
            </value>
            <value>
                <fullName>HDR</fullName>
            </value>
            <value>
                <fullName>Tournaments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>