force-app/main/default/objects/Account/fields/Supported_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Supported_Platforms__c</fullName>
    <description>This field is for Devrel account team manager profile</description>
    <label>Supported Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS3</fullName>
            </value>
            <value>
                <fullName>PS4</fullName>
            </value>
            <value>
                <fullName>PS Vita</fullName>
            </value>
            <value>
                <fullName>PS VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>